2014-04-10  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/159.xml, opt/pxlmono-PrinterResolution.xml,
	  opt/pxlmono-PrintoutMode.xml: The Lexmark E230 has only 600 dpi
	  maximum resolution, removed the 1200-dpi entries (Ubuntu bug
	  #1335561).

2014-04-10  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/brlaser.xml: Added new "brlaser" driver for Brother DCP
	  laser printers.
	* printer/Brother-DCP-7030.xml, printer/Brother-DCP-7065DN.xml:
	  Added Brother printers supported by the "brlaser" driver.

2014-06-11 Deng Pang <DengPang@rst.ricoh.com>
      * db/source/PPD/Gestetner/PS/Gestetner-MP_C401_PS.ppd,
        db/source/printer/Gestetner-MP_C401.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C401SR_PS.ppd,
        db/source/printer/Gestetner-MP_C401SR.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_C401_PS.ppd,
        db/source/printer/Lanier-MP_C401.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_C401SR_PS.ppd,
        db/source/printer/Lanier-MP_C401SR.xml,
        db/source/PPD/NRG/PS/NRG-MP_C401_PS.ppd,
        db/source/printer/NRG-MP_C401.xml,
        db/source/PPD/NRG/PS/NRG-MP_C401SR_PS.ppd,
        db/source/printer/NRG-MP_C401SR.xml,
        db/source/PPD/Ricoh/PS/Ricoh-MP_C401_PS.ppd,
        db/source/printer/Ricoh-MP_C401.xml,
        db/source/PPD/Ricoh/PS/Ricoh-MP_C401SR_PS.ppd,
        db/source/printer/Ricoh-MP_C401SR.xml,
        db/source/PPD/Savin/PS/Savin-MP_C401_PS.ppd,
        db/source/printer/Savin-MP_C401.xml,
        db/source/PPD/Savin/PS/Savin-MP_C401SR_PS.ppd,
        db/source/printer/Savin-MP_C401SR.xml,
        db/source/PPD/Infotec/PS/Infotec-MP_C401_PS.ppd,
        db/source/printer/Infotec-MP_C401.xml,
        db/source/PPD/Infotec/PS/Infotec-MP_C401SR_PS.ppd,
        db/source/printer/Infotec-MP_C401SR.xml:
        added PPD and XML files for 12 new printers.

2014-04-10  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/printer/Brother-HL-2135.xml: Added Brother HL-2135
	  (Ubuntu bug #1180996).
