@@ -1,0 +1,48 @@
+<printer id="printer/Brother-HL-2142">
+  <make>Brother</make>
+  <model>HL-2142</model>
+  <mechanism>
+    <laser />
+    <resolution>
+      <dpi>
+        <x>2400</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <lang>
+    <pcl level="5e" />
+    <pjl />
+  </lang>
+  <functionality>B</functionality>
+  <driver>hl1250</driver>
+  <drivers>
+    <driver>
+      <id>gimp-print</id>
+    </driver>
+    <driver>
+      <id>gutenprint</id>
+    </driver>
+    <driver>
+      <id>hl1250</id>
+    </driver>
+    <driver>
+      <id>hpijs-pcl5e</id>
+    </driver>
+    <driver>
+      <id>lj4dith</id>
+    </driver>
+    <driver>
+      <id>ljet4</id>
+    </driver>
+  </drivers>
+  <comments>
+    <en>
+
+      According to a user report this printer works well with the "hl1250"
+      Ghostscript driver. As this is a PCL-5e driver, it should also work with
+      other PCL-5e drivers.
+
+    </en>
+  </comments>
+</printer>
