@@ -1,4 +1,9 @@
-2014-04-10  Till Kamppeter <till.kamppeter@gmail.com>
+2014-07-04  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Brother-HL-2142.xml: Added entry for the Brother HL-2142
+	  (Ubuntu bug #1337743).
+
+2014-07-03  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* opt/159.xml, opt/pxlmono-PrinterResolution.xml,
 	  opt/pxlmono-PrintoutMode.xml: The Lexmark E230 has only 600 dpi
